Add 256 colour terminal

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ set -g base-index 1
 set -g history-limit 5000
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g alternate-screen on
+set -g default-terminal "screen-256color"
 
 # Status bar customization
 set -g status-utf8 on
