--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # Set a Ctrl-b shortcut for reloading your tmux config
-bind r source-file ~/.tmux.conf
+unbind r
+bind r source-file ~/.tmux.conf \; display "tmux.conf reloaded"
 
 # Rename your terminals
 set -g set-titles on
@@ -14,6 +15,9 @@ set -g history-limit 5000
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g alternate-screen on
 set -g default-terminal "screen-256color"
+
+# Keep your finger on ctrl, or don't
+bind-key ^D detach-client
 
 # Status bar customization
 set -g status-utf8 on
@@ -30,10 +34,18 @@ set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
-# Pane Config
+# Window / Pane
 set -g pane-border-fg white
 set -g pane-active-border-fg white
 set -g pane-active-border-bg default
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
+
+# Create splits and vertical splits
+bind-key v split-window -h -p 50 -c "#{pane_current_path}"
+bind-key h split-window -p 50 -c "#{pane_current_path}"
+
+# sends input to all panes in a given window
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
