--- a/.gitconfig
+++ b/.gitconfig
@@ -33,6 +33,13 @@
 
 [push]
 	default = current
+	followTags = true
 
 [merge]
 	tool = opendiff
+[difftool "sourcetree"]
+	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /usr/local/bin/ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
+	trustExitCode = true
