--- a/.gitconfig
+++ b/.gitconfig
@@ -23,7 +23,7 @@
 	trustExitCode = false
 
 [core]
-	excludesfile = ~/.gitignore
+	excludesfile = /Users/paul/.gitignore_global
 
 [difftool]
 	prompt = false
@@ -38,8 +38,8 @@
 [merge]
 	tool = opendiff
 [difftool "sourcetree"]
-	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
+	cmd = /Users/paul/Applications/SourceTree.app/Contents/Resources/araxiscompare-w.sh -2 \"$LOCAL\" \"$REMOTE\"
 	path = 
 [mergetool "sourcetree"]
-	cmd = /usr/local/bin/ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
+	cmd = /Users/paul/Applications/SourceTree.app/Contents/Resources/araxisgitmerge-w.sh \"$REMOTE\" \"$BASE\" \"$LOCAL\" \"$MERGED\"
 	trustExitCode = true
