--- a/configs/code/settings.json
+++ b/configs/code/settings.json
@@ -17,5 +17,9 @@
     "cSpell.language": ",en-GB",
     "explorer.confirmDelete": false,
     "workbench.startupEditor": "newUntitledFile",
-    "files.autoSave": "off"
+    "files.autoSave": "off",
+    "cSpell.userWords": [
+        "feed",
+        "insta"
+    ]
 }
