--- a/.gitconfig
+++ b/.gitconfig
@@ -21,6 +21,7 @@
 
 [core]
     ignorecase = false
+	excludesfile = /Users/serby/.gitignore_global
 
 [push]
 	default = current
@@ -41,3 +42,5 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[commit]
+	template = /Users/serby/.stCommitMsg
